# necromancy

./: Cargo.toml  bacon.toml  hello80.s
elf2nof/: Cargo.toml
elf2nof/src/: .main.rs.swp  main.rs
necro/: Cargo.toml  SYNTAX.md
necro-derive/: Cargo.toml
necro-derive/src/: lib.rs
necro/src/: lexer-back.rs  lexer.rs  main.rs  parser.rs  parser2.rs  section.rs  templater.rs
necro/src/cpu/: i8080.rs  mips.rs  mod.rs  sh3.rs
nof/: Cargo.toml
nof/src/: diskfmt.rs  lib.rs
